# wiremock-client-rs

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
examples/: proxying.rs  request_matching.rs  simulating_faults.rs  stateful_behaviour.rs  stub_metadata.rs  stubbing.rs  verifying.rs
src/: common.rs  extension.rs  global.rs  lib.rs  matching.rs  security.rs  serde.rs  stubbing.rs
src/client/: builder.rs  credentials.rs  mod.rs
src/client/builder/: mapping_builder.rs  mod.rs  response_definition_builder.rs  wire_mock_builder.rs
src/client/dsl/: count.rs  matching.rs  mod.rs  request.rs  response.rs  stubbing.rs
src/common/: metadata.rs  mod.rs  timing.rs
src/http/: body.rs  chunked_dribble_delay.rs  cookie.rs  delay_distribution.rs  fault.rs  logged_response.rs  mod.rs  multi_value.rs  query_parameter.rs  request_method.rs  response_definition.rs
src/matching/: builder.rs  content_pattern.rs  count.rs  match_result.rs  mod.rs  request_pattern.rs  url_pattern.rs
src/model/: get_global_settings_result.rs  get_scenarios_result.rs  get_serve_events_result.rs  list_stub_mappings_result.rs  mod.rs  pagination.rs  single_served_stub_result.rs  single_stub_mapping_result.rs
src/serde/: base64.rs  header_map.rs  mod.rs  u16_negative_to_option.rs  u32_negative_to_option.rs
src/stubbing/: mod.rs  scenario.rs  serve_event.rs  stub_import.rs  stub_mapping.rs
src/verification/: find_near_misses_result.rs  find_requests_result.rs  journal_based_result.rs  logged_request.rs  mod.rs  near_miss.rs  verification_result.rs
tests/: client.rs  stub_metadata.rs
