[package]
name = "wiremock-client"
version = "0.1.0"
edition = "2018"
authors = ["Michael Mitteregger <michael.mitteregger@gmx.at>"]
description = "WireMock client"
homepage = "https://github.com/mmitteregger/wiremock-client-rs"
repository = "https://github.com/mmitteregger/wiremock-client-rs"
readme = "README.md"
keywords = ["wiremock", "http", "mock", "client"]
categories = ["development-tools::testing"]
license = "Apache-2.0/MIT"

[dependencies]
http = "0.1"
reqwest = "0.9"
base64 = "0.10"
uuid = { version = "0.7", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "1", features = ["serde-1"] }
encoding_rs = { version = "0.8", optional = true }
mime = { version = "0.3", optional = true }

[features]
default = []
decode = ["mime", "encoding_rs"]
